--- a/templates/planeswalkers/deck/edit.html.twig
+++ b/templates/planeswalkers/deck/edit.html.twig
@@ -144,6 +144,25 @@
 
                 </div>
             </div>
+
+            {# Probabilités de tirage par tour #}
+            <a href="{{ path('planeswalkers.deck.probabilites', {id: deck.id}) }}" class="text-light">
+                <div class="card border-left-light shadow py-2">
+                    <div class="card-body">
+                        <div class="row no-gutters align-items-center">
+                            <div class="col mr-2">
+                                <div class="h5 mb-0 font-weight-bold text-light-800">Probabilités</div>
+                                <div class="text-xs font-weight-bold text-light text-uppercase mb-1">de tirage par tour</div>
+                            </div>
+                            <div class="col-auto">
+                                <i class="fas fa-hat-wizard fa-2x text-gray-300"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </a>
+
+
         </div>
     </div>
 
