--- a/templates/planeswalkers/deck/probabilites.html.twig
+++ b/templates/planeswalkers/deck/probabilites.html.twig
@@ -9,7 +9,7 @@
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <h1 class="h3 mb-0 text-gray-200"><i class="fas fa-layer-group"></i> Probabilités de tirage du deck <em>"{{ deck.title }}"</em></h1>
         <div class="d-sm-inline-block">
-            <a href="{{ path('planeswalkers.deck.index') }}" class="btn btn-sm btn-secondary shadow-sm">
+            <a href="{{ path('planeswalkers.deck.edit', {id:deck.id}) }}" class="btn btn-sm btn-secondary shadow-sm">
                 <i class="fas fa-reply fa-sm text-white-50"></i>
             </a>
         </div>
