--- a/templates/planeswalkers/deck/edit.html.twig
+++ b/templates/planeswalkers/deck/edit.html.twig
@@ -182,7 +182,7 @@
             </div>
 
             {# Estimation #}
-            <a href="{{ path('planeswalkers.deck.estimation', {id: deck.id}) }}" class="text-light click-main-depart" data-toggle="modal" data-target="#mainDepartModal">
+            <a href="{{ path('planeswalkers.deck.estimation', {id: deck.id}) }}" class="text-light">
                 <div class="card border-left-light shadow py-2 mb-4">
                     <div class="card-body">
                         <div class="row no-gutters align-items-center">
