--- a/templates/planeswalkers/deck/estimation.html.twig
+++ b/templates/planeswalkers/deck/estimation.html.twig
@@ -9,7 +9,7 @@
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <h1 class="h3 mb-0 text-gray-200"><i class="fas fa-layer-group"></i> {{ deck.title }}</h1>
         <div class="d-sm-inline-block">
-            <a href="{{ path('planeswalkers.deck.index') }}" class="btn btn-sm btn-secondary shadow-sm">
+            <a href="{{ path('planeswalkers.deck.edit', {id: deck.id}) }}" class="btn btn-sm btn-secondary shadow-sm">
                 <i class="fas fa-reply fa-sm text-white-50"></i>
             </a>
         </div>
@@ -31,8 +31,17 @@
             <b>Votre deck est estimé à {{ estimation['deck']['total'] }} €</b>
         </div>
     </div>
-    
+
+    {# Cartes principales #}
     <div class="card shadow mb-4">
+        <div class="card-header py-3 d-flex align-items-center justify-content-between">
+            <div class="h6 m-0 font-weight-bold text-light">
+                Cartes principales
+            </div>
+            <div class="d-sm-inline-block">
+                <b>{{ estimation['deck']['total_main'] }} €</b>
+            </div>
+        </div>
         <div class="card-body">
             <div class="row">
                 <div class="table-responsive">
@@ -49,6 +58,68 @@
                         </thead>
                         <tbody>
                             {% for card in estimation['cartes'] %}
+                                {% if card.quantite > 0 %}
+                                    <tr>
+                                        <td>
+                                            <a href="{{ path('planeswalkers.card.show', {id: card.carte.id}) }}">
+                                                <img src="{{ card.carte.image_uris.normal }}" alt="{{ card.carte.name }}" class="img-fluid" style="border-radius:15px;width:80px;">
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <b>{{ card.carte.name }}</b>
+                                            <br><em>{{ card.carte.type_line }}</em>
+                                        </td>
+                                        <td>
+                                            {{ card.quantite }}
+                                        </td>
+                                        <td>
+                                            {{ card.carte.prices.eur }} €
+                                        </td>
+                                        <td>
+                                            {{ card.total_carte_main }} €
+                                        </td>
+                                        <td>
+                                                <a href="{{ card.carte.purchase_uris.tcgplayer }}" target="_blank">TCG Player</a>
+                                            <br><a href="{{ card.carte.purchase_uris.cardmarket }}" target="_blank">Cardmarket</a>
+                                            <br><a href="{{ card.carte.purchase_uris.cardhoarder }}" target="_blank">Cardhoader</a>
+                                        </td>
+                                    </tr>
+                                {% endif %}
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    {# Réserve #}
+    <div class="card shadow mb-4">
+        <div class="card-header py-3 d-flex align-items-center justify-content-between">
+            <div class="h6 m-0 font-weight-bold text-light">
+                Réserve
+            </div>
+            <div class="d-sm-inline-block">
+                <b>{{ estimation['deck']['total_reserve'] }} €</b>
+            </div>
+        </div>
+        <div class="card-body">
+            <div class="row">
+                <div class="table-responsive">
+                    <table class="table table-sm table-striped">
+                        <thead>
+                        <tr>
+                            <th></th>
+                            <th>Carte</th>
+                            <th>Quantité</th>
+                            <th>Côte actuel</th>
+                            <th>Total carte</th>
+                            <th>Acheter</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for card in estimation['cartes'] %}
+                            {% if card.quantite_reserve > 0 %}
                                 <tr>
                                     <td>
                                         <a href="{{ path('planeswalkers.card.show', {id: card.carte.id}) }}">
@@ -60,21 +131,22 @@
                                         <br><em>{{ card.carte.type_line }}</em>
                                     </td>
                                     <td>
-                                        {{ card.quantite }}
+                                        {{ card.quantite_reserve }}
                                     </td>
                                     <td>
                                         {{ card.carte.prices.eur }} €
                                     </td>
                                     <td>
-                                        {{ card.total_carte }} €
+                                        {{ card.total_carte_reserve }} €
                                     </td>
                                     <td>
-                                            <a href="{{ card.carte.purchase_uris.tcgplayer }}" target="_blank">TCG Player</a>
+                                        <a href="{{ card.carte.purchase_uris.tcgplayer }}" target="_blank">TCG Player</a>
                                         <br><a href="{{ card.carte.purchase_uris.cardmarket }}" target="_blank">Cardmarket</a>
                                         <br><a href="{{ card.carte.purchase_uris.cardhoarder }}" target="_blank">Cardhoader</a>
                                     </td>
                                 </tr>
-                            {% endfor %}
+                            {% endif %}
+                        {% endfor %}
                         </tbody>
                     </table>
                 </div>
